WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155850
DataDetection creates links that are longer than the actual result
https://bugs.webkit.org/show_bug.cgi?id=155850
Summary
DataDetection creates links that are longer than the actual result
Enrica Casucci
Reported
2016-03-24 12:29:50 PDT
If a data detection result is over two lines and is followed by some text that is not part of the result, we incorrectly include the text until the end of the line as part of the resulting link.
rdar://problem/25280740
Attachments
Patch3
(1.84 KB, patch)
2016-03-24 12:41 PDT
,
Enrica Casucci
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2016-03-24 12:41:01 PDT
Created
attachment 274851
[details]
Patch3
Enrica Casucci
Comment 2
2016-03-24 16:09:29 PDT
Committed revision 198650.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug